--- a/index.html
+++ b/index.html
@@ -3,12 +3,39 @@
 
 <head>
     <meta charset=utf-8/>
+    <link rel="stylesheet" href="style.css">
+
+    <script src="js/ds.v6.1.1/d3.min.js"></script>
+
+    <title>hw-05</title>
 </head>
 
 
 <body>
+    <h1 class="centered">hw-05: Interactive Graph with D3</h1>
 
+    <div class="row">
 
+    <div class="maincont">
+
+        <!-- create the left hand column -->
+        <div class="lcol">
+        </div>
+    </div>
+
+        <!-- create the right hand column -->
+        <div class="rcol">
+        </div>
+    </div>
+
+    <!-- add acknowledgements section for resources uded -->
+    <h4 class="centered">Acknowledgements</h4>
+    <div>
+        <ul>
+        </ul>
+    </div>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
