--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset=utf-8/>
     <link rel="stylesheet" href="style.css">
 
-    <script src="js/ds.v6.1.1/d3.min.js"></script>
+    <script src="js/d3.v6.1.1/d3.min.js"></script>
 
     <title>hw-05</title>
 </head>
@@ -20,6 +20,9 @@
 
         <!-- create the left hand column -->
         <div class="lcol">
+            <div id="barplot">
+                
+            </div>
         </div>
     </div>
 
