--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     <h4 class="centered">Acknowledgements</h4>
     <div>
         <ul>
+            <!-- https://www.geeksforgeeks.org/d3-js-axisbottom-function/ - axis bottom -->
         </ul>
     </div>
 
