--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
 
         <!-- create the left hand column -->
         <div class="lcol">
-            <div id="barplot">
-                
-            </div>
-            <p></p>
+            <div id="scatterplot"></div>
+            <div id="barplot"></div>
         </div>
     </div>
 
