Worked on scatterplot and user defined points

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     <div>
         <ul>
             <!-- https://www.geeksforgeeks.org/d3-js-axisbottom-function/ - axis bottom -->
+            <!-- https://stackoverflow.com/questions/18342416/d3-js-click-event-in-a-bubble-scatter-chart - scatter chart click event -->
         </ul>
     </div>
 
