--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 
         <!-- create the left hand column -->
         <div class="lcol">
-            <div id="scatterplot"></div>
-            <div id="barplot"></div>
+            <div id="barplot">
+                
+            </div>
+            <p></p>
         </div>
     </div>
 
@@ -73,7 +75,10 @@
     <h4 class="centered">Acknowledgements</h4>
     <div>
         <ul>
-            <!-- https://www.geeksforgeeks.org/d3-js-axisbottom-function/ - axis bottom -->
+            <!-- https://www.geeksforgeeks.org/d3-js-axisbottom-function/ - axis bottom
+            https://stackoverflow.com/questions/31189289/how-to-flip-the-y-axis-on-my-d3-graph for flipping y axis
+            https://d3-graph-gallery.com/graph/custom_axis.html x-axis labels
+            https://d3-graph-gallery.com/graph/barplot_basic.html help with categorical X -->
         </ul>
     </div>
 
