updated bar plot

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <!-- create the left hand column -->
         <div class="lcol">
             <div id="scatterplot"></div>
-            <div id="barplot"></div>
+            <div id="barplot">
+            </div>
         </div>
     </div>
 
@@ -77,7 +78,9 @@
             https://stackoverflow.com/questions/31189289/how-to-flip-the-y-axis-on-my-d3-graph for flipping y axis
             https://d3-graph-gallery.com/graph/custom_axis.html x-axis labels
             https://d3-graph-gallery.com/graph/barplot_basic.html help with categorical X 
-            https://d3-graph-gallery.com/graph/barplot_basic.html for bar plot-->
+            https://d3-graph-gallery.com/graph/barplot_basic.html for bar plot
+            https://stackoverflow.com/questions/34733940/d3-js-tooltip-and-attribute-change-on-mouseover highlighting columns on mouseover
+            https://stackoverflow.com/questions/72165273/d3-tooltip-placed-on-bottom-of-page-instead-of-next-to-data tooltip placement-->
             <!-- https://www.geeksforgeeks.org/d3-js-axisbottom-function/ - axis bottom -->
             <!-- https://stackoverflow.com/questions/18342416/d3-js-click-event-in-a-bubble-scatter-chart - scatter chart click event -->
         </ul>
