--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
             <li><a href="https://stackoverflow.com/questions/20414980/d3-select-by-attribute-value">d3.select by attribute value</a></li>
             <li><a href="https://stackoverflow.com/questions/52219713/d3-get-element-attribute-inside-selectall">D3: get element attribute inside selectAll</a></li>
             <li><a href="https://stackoverflow.com/questions/72165273/d3-tooltip-placed-on-bottom-of-page-instead-of-next-to-data tooltip placement">Help with Tooltip Placement</a></li>
+            <li><a href="https://jaketrent.com/post/d3-class-operations/#:~:text=To%20check%20for%20the%20existence,selectAll(%22.">removing border on click</a></li>
+            <li><a href="https://www.tutorialsteacher.com/d3js/dom-manipulation-using-d3js#text.">d3 inner html</a></li>
         </ul>
     </div>
 
