Lasting changes to hw

--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
         <!-- Create the left hand column -->
         <div class="lcol">
             <div id="scatterplot"></div>
-            <div id="barplot">
-            </div>
+            <div id="barplot"></div>
         </div>
     </div>
 
-        <!-- Create the right hand column and add the dropdowns [1,9] -->
+        <!-- Create the right hand column -->
         <div class="rcol">
 
             <!-- Show coordinates of points that were clicked on -->
